--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -22,7 +22,7 @@ jobs:
           MYSQL_DATABASE: inventory
           MYSQL_USER: praveen
           MYSQL_PASSWORD: praveen
-        options: --health-cmd="mysqladmin ping --silent" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: --health-cmd="mysqladmin ping --silent" --health-interval=10s --health-timeout=5s --health-retries=10
 
     steps:
       - name: Checkout code
@@ -47,6 +47,14 @@ jobs:
           sed -i "s|'HOST': 'localhost'|'HOST': 'localhost'|" myproject/settings.py
           sed -i "s|'PORT': '3306'|'PORT': '3306'|" myproject/settings.py
 
+
+      - name: Wait for MySQL to be ready
+        run: |
+          until mysql -h 127.0.0.1 -u praveen -ppraveen -e "SELECT 1" inventory; do
+            echo "Waiting for MySQL to be ready..."
+            sleep 5
+          done
+          
       - name: Run migrations
         run: |
           python manage.py makemigrations
