--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -37,6 +37,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install mysqlclient==2.1.1
 
       - name: Set up Django database settings for MySQL
         run: |
@@ -54,7 +55,7 @@ jobs:
             echo "Waiting for MySQL to be ready..."
             sleep 5
           done
-          
+
       - name: Run migrations
         run: |
           python manage.py makemigrations
