add database test

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,4 +1,4 @@
-name: Django Tests with MySQL
+name: Django CI/CD with MySQL
 
 on:
   push:
@@ -37,8 +37,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install mysqlclient==2.1.1
-          sudo systemctl start mysql
 
       - name: Set up Django database settings for MySQL
         run: |
@@ -49,18 +47,17 @@ jobs:
           sed -i "s|'HOST': 'localhost'|'HOST': 'localhost'|" myproject/settings.py
           sed -i "s|'PORT': '3306'|'PORT': '3306'|" myproject/settings.py
 
-
       - name: Wait for MySQL to be ready
         run: |
-          until mysql -h 127.0.0.1 -u praveen -ppraveen -e "SELECT 1" inventory; do
-            echo "Waiting for MySQL to be ready..."
+          until mysql -h 127.0.0.1 -u praveen -ppraveen -e "SELECT 1"; do
+            echo "Waiting for MySQL..."
             sleep 5
           done
 
       - name: Run migrations
         run: |
-          python manage.py makemigrations
-          python manage.py migrate
+          python manage.py makemigrations --verbosity 3
+          python manage.py migrate --verbosity 3
 
       - name: Run pytest
         run: |
