--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,10 @@ google-cloud-storage==2.19.0
 google-crc32c==1.6.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.66.0
+graphene==3.4.3
+graphene-django==3.2.2
+graphql-core==3.2.5
+graphql-relay==3.2.0
 grpcio==1.68.1
 grpcio-status==1.68.1
 httplib2==0.22.0
@@ -27,6 +31,7 @@ msgpack==1.1.0
 mysqlclient==2.2.6
 packaging==24.2
 pluggy==1.5.0
+promise==2.3
 proto-plus==1.25.0
 protobuf==5.29.2
 pyasn1==0.6.1
@@ -36,9 +41,12 @@ PyJWT==2.10.1
 pyparsing==3.2.0
 pytest==8.3.4
 pytest-django==4.9.0
+python-dateutil==2.9.0.post0
 requests==2.32.3
 rsa==4.9
+six==1.17.0
 sqlparse==0.5.3
+text-unidecode==1.3
 tomli==2.2.1
 typing_extensions==4.12.2
 uritemplate==4.1.1
